--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
         body {
             font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
+            background: linear-gradient(to bottom, #2E073F, #EBD3F8);
             margin: 0;
             padding: 0;
         }
