--- a/index.html
+++ b/index.html
@@ -302,10 +302,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Us</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./mission.html">About Us</a></li>
                 <li><a href="#reserve">Reserve</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="./contact.html">Contact</a></li>
                 <button style="background-color: #EBD3F8; color: black; padding: 5px 20px; border: none; border-radius: 15px; cursor: pointer; font-size: 16px;">
                     Login / Sign-Up
                 </button>                  
@@ -318,7 +318,7 @@
         <div class="about-us-content" style="background-color: rgba(255, 255, 255, 0.9); padding: 2rem; border-radius: 10px; max-width: 600px; margin: auto;">
             <h2 style="color: #2E073F;">Welcome to UrbanWheels</h2>
             <p>We offer a wide range of vehicles for all your needs. Our mission is to provide top-notch service and a seamless rental experience. With a variety of cars, trucks, and vans, we cater to every type of customer, ensuring satisfaction and convenience at every step. Our dedicated team is here to assist you 24/7, ensuring your journey is smooth and enjoyable. Choose us for your next rental and experience the difference in quality and service.</p>
-            <a href="#" style="margin-top:1rem; align-self: center;" class="btn btn-custom btn-lg"><b>Reserve a Vehicle</b></a>
+            <a href="./home.html" style="margin-top:1rem; align-self: center;" class="btn btn-custom btn-lg"><b>Reserve a Vehicle</b></a>
         </div>
     </div>
 
